# mistral

./: CLAUDE.md  README.md  README_DB.md  dev.sh
backtesting/: backtest.py  pyproject.toml  requirements.txt  results.json
edge-service/: pyproject.toml  test_edge.py
edge-service/app/: main.py
edge-service/app/routers/: edge.py
edge-service/app/services/: edge.py
kalshi-service/: README.md  pyproject.toml
kalshi-service/app/: main.py
kalshi-service/app/routers/: markets.py  orders.py  portfolio.py
kalshi-service/app/services/: kalshi_auth.py  kalshi_client.py  summary.py
market-ingestion/: README.md  README_KALSHI.md  openapi-kalshi.yaml  pyproject.toml  settled_sports_events_20260301_031142.json  settled_sports_series_20260301_025635.json
market-ingestion/app/: main.py
market-ingestion/app/jobs/: sync_open_events.py  sync_open_markets.py
market-ingestion/app/routers/: events.py  historical-extended.py  historical.py  markets.py  series.py  sports.py
market-ingestion/app/services/: export_settled_sports_events.py  export_settled_sports_markets.py  export_settled_sports_series.py
market-ingestion/scripts/: helpers.sh
market-ingestion/tests/: conftest.py  test_supabase_connection.py  test_sync_open_markets.py
prediction-service/: README.md  pyproject.toml  test_predict.py
prediction-service/app/: main.py
prediction-service/app/routers/: predict.py
prediction-service/app/services/: prediction.py
research-service/: pyproject.toml  test_research.py
research-service/app/: main.py
research-service/app/routers/: research.py
research-service/app/services/: agent.py  espn.py  schemas.py  tavily.py  tools.py
telegram-service/: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  smoke_test.py
telegram-service/app/: __init__.py  config.py  kalshi_client.py  service.py  telegram_bot.py  websocket_client.py
telegram-service/tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_kalshi_client.py  test_service.py  test_telegram_bot.py
web/: colors.js
web/app/: MarketsView.tsx  globals.css  layout.tsx  page.tsx
web/app/api/markets/: route.ts
web/app/api/markets/[ticker]/: route.ts
web/app/api/orders/: route.ts
web/app/api/stats/: route.ts
web/app/components/: MarketDetailPanel.tsx  MarketsTable.tsx  MarketsTable.tsx.withpanel  PlaceBetModal.tsx  Sidebar.tsx  SportFilters.tsx  StatsCards.tsx  StatsCardsLoader.tsx
web/app/positions/: page.tsx
web/lib/api/: clients.ts  edge.ts  kalshi.ts  prediction.ts
web/lib/transform/: toMarketDetail.ts  toMarketRow.ts
