[project]
name = "telegram-service"
version = "0.1.0"
description = "Telegram bot service with WebSocket listener"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[webhooks]>=21.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
